examples/invalid/ns/memory/hello_task_glm_nested_instance_struct_payload_invalid.ns
mod cpu Main {
  struct ShaderPacket {
    shader: Instance<SurfaceShader>
  }

  async fn render(packet: ShaderPacket) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    return 1;
  }
}
